--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-plugin-root-import": "^6.6.0",
     "babel-root-import": "^4.1.8",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
