--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
