--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
+    "mecab-async": "^0.1.2",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
