--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "mecab-async": "^0.1.2",
+    "mecab-client": "^0.0.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
