--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,10 @@
 FROM python:3.9
 WORKDIR /app
 
-COPY ./requirements.txt /app
-RUN pip install -r ./requirements.txt
+COPY requirements.txt /app
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip3 install -r requirements.txt
 COPY . /app
-ENV FLASK_ENV production
-ENV FLASK_APP ./my_nltk_script.py
 
-
-ENTRYPOINT [ "flask" ]
-CMD ["run", "--host=0.0.0.0", "--port=5000"]
+ENTRYPOINT ["python3"]
+CMD ["app.py"]
