[update]The article said esbuild should be situated in entrypoint, however, it didn't work, so I made the command up together with npm preview

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       ports:
         - 8000:80
       volumes:
-        - ./client/build:/var/www
+        - ./client/app/build:/var/www/build
         - ./nginx/:/etc/nginx/
       depends_on:
         - frontend
@@ -23,8 +23,7 @@ services:
     volumes:
       - ./client:/app
     tty: true
-    entrypoint: sh -c "npm rebuild esbuild"
-    command: npm run preview
+    command: sh -c "npm rebuild esbuild && npm run preview"
   backend:
     restart: always
     container_name: "moviefun-backend"
