--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,45 +7,23 @@ events {
 }
 
 http {
+    # include /etc/nginx/mime.types;
     server {
-        listen       80 default_server;
-        # include /etc/nginx/conf.d/*.conf;
-
+        listen       80;
+        
         location / {
-            root   /var/www;
-            index  index.html index.htm;
-            try_files $uri /index.html;
-            # proxy_http_version 1.1;
-            # proxy_set_header Upgrade $http_upgrade;
-            # proxy_set_header Connection "upgrade";
-            # proxy_set_header Host $host;
-            # proxy_pass http://frontend:8080/;
+            root   /var/www/dist/;
+            index index.html;
+            try_files $uri $uri/ /index.html =404;
+            proxy_pass      http://frontend:8080;
         }
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
         }
 
-        location /api/ {
-            # proxy_http_version 1.1;
-            # proxy_set_header Upgrade $http_upgrade;
-            # proxy_set_header Connection "upgrade";
-            # proxy_set_header Host $host;
-            proxy_pass http://api:5000/;
+        location /backend/ {
+            proxy_pass http://backend:5000/;
          }
     }
 }
-
-# server {
-#     listen       80;
-
-#     location / {
-#         root   /var/www;
-#         index  index.html index.htm;
-#         try_files $uri /index.html;
-#     }
-#     error_page   500 502 503 504  /50x.html;
-#     location = /50x.html {
-#         root   /usr/share/nginx/html;
-#     }
-# }
